--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+PIL
 # These requirements are only necessary when developing on Dio.
 # You can check for newer versions of these dependencies using this command
 #
@@ -5,3 +6,11 @@
 
 django==1.7.0
 psycopg2==2.6.1
+django-treebeard==3.0
+pillow==2.9.0
+sorl-thumbnail==12.3
+django-autoslug==1.8.0
+django-mptt==0.7.4
+django-mptt-admin==0.2.1
+pytils==0.3
+
