include pagination in site

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,7 @@ django-annoying==0.8.3
 django-registration-redux==1.2
 haystack==0.15
 python-ptrace==0.8.1
-django-pagination==1.0.7
 django-ordered-model==0.4.2
-
+django-pure-pagination==0.2.0
 
 
