--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+haystack
 PIL
 # These requirements are only necessary when developing on Dio.
 # You can check for newer versions of these dependencies using this command
@@ -15,9 +16,13 @@ django-mptt-admin==0.2.1
 pytils==0.3
 django-annoying==0.8.3
 django-registration-redux==1.2
-haystack==0.15
 python-ptrace==0.8.1
-django-ordered-model==0.4.2
 django-pure-pagination==0.2.0
+
+django-haystack==2.4.0
+pysolr==3.3.2
+pyelasticsearch==0.5
+
+django-debug-toolbar==1.3.2
 
 
